# adaptagrams-internal

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
adaptagrams-demo/: CMakeLists.txt  Makefile  adaptagrams.h  adaptagrams_demo.cpp  main.cpp
cola/: autogen.sh
cola/libnative/: org_graph_outside_NativeLibrary.cpp  org_graph_outside_NativeLibrary.h
